[gd_scene load_steps=8 format=3 uid="uid://cwiritx4rencv"]

[ext_resource type="Script" uid="uid://ic7q6hrbkrni" path="res://scripts/ui/enemy_icon.gd" id="1_2gkvw"]
[ext_resource type="Texture2D" uid="uid://dhpcoum0eycgh" path="res://art/2d/enemies/icons/chaser_icon.aseprite" id="1_2ymfj"]
[ext_resource type="PackedScene" uid="uid://6lvn3tolsp7r" path="res://scenes/ui/menu_button.tscn" id="2_xlxpa"]
[ext_resource type="FontFile" uid="uid://b78ski6kf8hw1" path="res://fonts/ari-w9500-display.ttf" id="3_xlxpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gkvw"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ymfj"]
bg_color = Color(0.3032328, 0.30323285, 0.30323276, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 4

[sub_resource type="FontVariation" id="FontVariation_xlxpa"]
base_font = ExtResource("3_xlxpa")
spacing_glyph = 2

[node name="EnemyIcon" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2gkvw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -200.0
offset_right = 532.0
offset_bottom = 200.0
grow_vertical = 2
theme_override_constants/separation = 32

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2gkvw")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("1_2ymfj")

[node name="Button" parent="HBoxContainer/PanelContainer" instance=ExtResource("2_xlxpa")]
layout_mode = 2
mouse_filter = 1
focus_enabled = false

[node name="DescriptionPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2ymfj")

[node name="TextContainer" type="VBoxContainer" parent="HBoxContainer/DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="RichTextLabel" parent="HBoxContainer/DescriptionPanel/TextContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_xlxpa")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[wave freq=3]swag boss guy"
horizontal_alignment = 1

[node name="Category" type="RichTextLabel" parent="HBoxContainer/DescriptionPanel/TextContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_xlxpa")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[shake rate=10 levle=1]LETHAL ENEMY"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="HBoxContainer/DescriptionPanel/TextContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_xlxpa")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[wave]???"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hint" type="RichTextLabel" parent="HBoxContainer/DescriptionPanel/TextContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_xlxpa")
theme_override_font_sizes/normal_font_size = 24
text = "Hint:
It's sooooo cool... yeah"
horizontal_alignment = 1

[connection signal="mouse_entered" from="HBoxContainer/PanelContainer" to="." method="_on_hover"]
[connection signal="mouse_exited" from="HBoxContainer/PanelContainer" to="." method="_on_unhover"]
